--- a/module/Admin/view/admin/proveedor-oficina/index.phtml
+++ b/module/Admin/view/admin/proveedor-oficina/index.phtml
@@ -8,6 +8,25 @@ if ($this->msg != null)
 }
 ?>
 <div class="row">
+    
+    <div class="col-lg-12">
+        <div class="box box-bordered style-primary">
+            <div class="box-head">
+                <header>
+                    <h4 class="text-light">
+                       Formulario <strong>Proveedor Oficina</strong> 
+                    </h4>
+                </header>
+                
+                <div class="tools">
+                    <div class="btn-group btn-group-transparent">
+                        <a class="btn btn-equal btn-sm " data-target="#textModal" data-toggle="modal" onclick="showBusquedaOnModal(this,'<?php echo $this->basePath()?>/admin/proveedoroficina/buscar?origen=proveedoroficina/index','')"><i class="fa  fa-search"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <div class="col-lg-12">
         <div class="box">
             <div class="box-head">
@@ -81,50 +100,6 @@ if ($this->msg != null)
                 <?php echo $this->form()->closeTag(); ?>
             </div>
         </div><!--end .box -->
-        <?php if (count($this->registros)>0) { ?>       
-        <div class="row">  
-            <div class="col-lg-12">
-                <div class="box box-bordered">
-                    <div class="box-head">
-                        <header><h4 class="text-light"><strong>Oficinas Proveedor</strong> <small>Todas</small></h4></header>
-                    </div>
-                    <div class="box"> 
-                        <div class="box-body table-responsive">
-                            <div id="dtcrudindex_wrapper" class="dataTables_wrapper" role="grid">
-                                <table id="dtbuscar" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
-                                    <thead>
-                                        <tr role="row">
-                                            <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Proveedor</th>
-                                            <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Municipio</th>
-                                            <th lass="sorting" role="columnheader" tabindex="3" aria-controls="dtcrudindex" rowspan="1" colspan="1">Web Site</th>
-                                            <th lass="sorting" role="columnheader" tabindex="4" aria-controls="dtcrudindex" rowspan="1" colspan="1">Email</th>
-                                            <th lass="sorting" role="columnheader" tabindex="5" aria-controls="dtcrudindex" rowspan="1" colspan="1">Dirección</th>
-                                            <th lass="sorting" role="columnheader" tabindex="6" aria-controls="dtcrudindex" rowspan="1" colspan="1">Telefono</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                         <?php 
-                                        foreach ($this->registros as $obj) {
-                                            echo "
-                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"$(location).attr('href', '".$this->basePath()."/admin/proveedoroficina/index?id=".$obj['idProveedorOficina']."')\">
-                                                    <td>".$obj['descripcionTercero']."</td>
-                                                    <td>".$obj['descripcionMunicipio']."</td>
-                                                    <td>".$obj['webSite']."</td>
-                                                    <td>".$obj['email']."</td>
-                                                    <td>".$obj['direccion']."</td>
-                                                    <td>".$obj['telefono']."</td>
-                                                </tr>";
-                                        }
-                                        ?>
-                                    </tbody>
-                                </table>
-                             </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <?php } ?>
     </div>
 </div>
  
