Card #35 Modificacón de búsquedas de formularios y creación de estas.

--- a/module/Admin/view/admin/municipio/buscar.phtml
+++ b/module/Admin/view/admin/municipio/buscar.phtml
@@ -9,7 +9,7 @@
             <div class="col-lg-12">
                 <div class="box box-bordered">
                     <div class="box-head">
-                        <header><h4 class="text-light"><strong>Municipios</strong></h4></header>
+                        <header><h4 class="text-light">Búsqueda <strong>Municipios</strong></h4></header>
                         <a class="btn btn-equal btn-sm btn-close" id="btnCloseBusquedaMunicipio" style="float: right" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></a>
                     </div>
                     <div class="box"> 
