ajuste en la tabla de tercero.

--- a/module/Admin/view/admin/dato-basico-tercero/index.phtml
+++ b/module/Admin/view/admin/dato-basico-tercero/index.phtml
@@ -58,34 +58,18 @@ if ($this->msg != null) {
                 </div>
                 <div class="form-group">
                     <div class="col-lg-1 col-md-2 col-sm-3">
-                        <label for="email1" class="control-label">Primer Nombre</label>
+                        <label for="email1" class="control-label">Nombre</label>
                     </div>
                     <div class="col-lg-5 col-md-11 col-sm-9">
-                        <?php echo $this->formInput($form->get('primerNombre')); ?>                            
+                        <?php echo $this->formInput($form->get('nombre')); ?>                            
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-lg-1 col-md-2 col-sm-3">
-                        <label for="email1" class="control-label">Segundo Nombre</label>
+                        <label for="email1" class="control-label">Apellido</label>
                     </div>
                     <div class="col-lg-5 col-md-11 col-sm-9">
-                        <?php echo $this->formInput($form->get('segundoNombre')); ?>                            
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-lg-1 col-md-2 col-sm-3">
-                        <label for="email1" class="control-label">Primer Apellido</label>
-                    </div>
-                    <div class="col-lg-5 col-md-11 col-sm-9">
-                        <?php echo $this->formInput($form->get('primerApellido')); ?>                            
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-lg-1 col-md-2 col-sm-3">
-                        <label for="email1" class="control-label">Segundo Apellido</label>
-                    </div>
-                    <div class="col-lg-5 col-md-11 col-sm-9">
-                        <?php echo $this->formInput($form->get('segundoApellido')); ?>                            
+                        <?php echo $this->formInput($form->get('apellido')); ?>                            
                     </div>
                 </div>
                 <div class="form-group">
