--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -29,7 +29,7 @@ if (defined('RUNNING_FROM_ROOT')) {
         <!-- Scripts -->
         <?php
         echo $this->headScript()
-                ->prependFile($this->basePath() . '/js/script2.js')
+                ->prependFile($this->basePath() . '/js/customScript.js')
                 ->prependFile($this->basePath() . '/js/registroobjetos.js')
                 ->prependFile($this->basePath() . '/admin/assets/js/libs/select2/select2.min.js')
                 ->prependFile($this->basePath() . '/admin/assets/js/core/demo/DemoUIMessages.js')
