--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -513,6 +513,7 @@ if (defined('RUNNING_FROM_ROOT')) {
             
                 ->appendFile($this->basePath().'/js/jquery.themepunch.tools.min.js')
                 ->appendFile($this->basePath().'/js/jquery.themepunch.revolution.min.js')
+                ->appendFile($this->basePath().'/js/jquery.jscrollpane.min.js')
             
                 ->appendFile($this->basePath().'/js/main.js')
                 ->appendFile($this->basePath().'/js/jquery.selectbox.min.js') 
