--- a/module/Application/view/application/buscar/index.phtml
+++ b/module/Application/view/application/buscar/index.phtml
@@ -1,3 +1,9 @@
+<script type="text/javascript">
+    $(document).ready(function()
+    {
+       $('#textobusqueda').val($.getParameter('textobusqueda',$(location).attr('href')).toString().replace('+',' ')); 
+    });
+</script>
 <div class="row">
    <div class="col-md-12">
       <div class="row">
