--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -168,7 +168,7 @@ if (defined('RUNNING_FROM_ROOT')) {
                               </div>
                               <ul class="menu clearfix">
                                  <li>
-                                    <a class="active" href="index.html">HOME</a>
+                                     <a class="active" href="<?php echo str_replace("/public", "",$this->basePath()) ?>">HOME</a>
                                  </li>
                                  <li class="mega-menu-container">
                                     <a href="#">Tienda</a>
@@ -354,7 +354,7 @@ if (defined('RUNNING_FROM_ROOT')) {
                 <div id="brand-slider-container" class="carousel-wrapper">
                     <header class="content-title">
                        <div class="title-bg">
-                          <h2 class="title">FABRICANTES</h2>
+                          <h2 class="title"></h2>
                        </div>
                        <!-- End .title-bg -->
                     </header>
