--- a/module/Application/view/application/buscar/index.phtml
+++ b/module/Application/view/application/buscar/index.phtml
@@ -8,15 +8,15 @@
    <div class="col-md-12">
       <div class="row">
          <div class="col-md-9 col-sm-8 col-xs-12 main-content">
-            <div id="category-header" class="category-banner">
+            <!--div id="category-header" class="category-banner">
                <img src="<?php echo $this->basePath() ?>/public/images/banner.png" alt="Category banner" class="img-responsive">
                <div class="category-title">
                   <h2>Computers</h2>
                   <p>Aenean dictum libero vitae magna sagittis, eu convallis dolor blandit. Fusce consectur tincidunt pretium aenean tincidunt...</p>
                   <a href="#" class="btn btn-custom">LEARN MORE</a>
                </div>
-               <!-- End .category-title -->
-            </div>
+               <!-- End .category-title 
+            </div>-->
             <!-- End #category-header -->
             <div class="md-margin"></div>
             <!-- space -->
@@ -35,7 +35,7 @@
                         </ul>
                      </div>
                   </div>
-                  <div class="view-box">
+                  <!--div class="view-box">
                      <a href="category.html" class="active icon-button icon-grid"><i class="fa fa-th-large"></i></a>
                      <a href="category-list.html" class="icon-button icon-list"><i class="fa fa-th-list"></i></a>
                   </div>
