--- a/module/Admin/view/admin/saldo-inventario/index.phtml
+++ b/module/Admin/view/admin/saldo-inventario/index.phtml
@@ -81,6 +81,14 @@ if ($this->validacion != null) {
                             <?php echo $this->formInput($form->get('valorVenta'));?>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <div class="col-lg-1 col-md-2 col-sm-3">
+                            <label for="email1" class="control-label">Estado</label>
+                        </div>
+                        <div class="col-lg-3 col-md-11 col-sm-9">
+                            <?php echo $this->formElement($form->get('estado'));?>
+                        </div>
+                    </div>
                     <div class="form-footer col-lg-offset-1 col-md-offset-2 col-sm-offset-3">
                         <?php   
                             echo $this->formElement($form->get('btnGuardar'));
