--- a/module/Admin/view/admin/saldo-inventario/index.phtml
+++ b/module/Admin/view/admin/saldo-inventario/index.phtml
@@ -83,6 +83,14 @@ if ($this->validacion != null) {
                     </div>
                     <div class="form-group">
                         <div class="col-lg-1 col-md-2 col-sm-3">
+                            <label for="email1" class="control-label">Url</label>
+                        </div>
+                        <div class="col-lg-3 col-md-11 col-sm-9">
+                            <?php echo $this->formInput($form->get('url'));?>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-lg-1 col-md-2 col-sm-3">
                             <label for="email1" class="control-label">Estado</label>
                         </div>
                         <div class="col-lg-3 col-md-11 col-sm-9">
