--- a/module/Admin/view/admin/usuario/buscar.phtml
+++ b/module/Admin/view/admin/usuario/buscar.phtml
@@ -9,7 +9,7 @@
             <div class="col-lg-12">
                 <div class="box box-bordered">
                     <div class="box-head">
-                        <header><h4 class="text-light"><strong>Usuario</strong> <small>Todas</small></h4></header>
+                        <header><h4 class="text-light"><strong>Usuarios</strong></h4></header>
                         <a class="btn btn-equal btn-sm btn-close" id="btnCloseBusquedaUsuario" style="float: right" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></a>
                     </div>
                     <div class="box"> 
@@ -37,7 +37,7 @@
                                                 <tr class='gradeX odd' style='cursor:pointer' onClick=\"". $onClick ."\">
                                                     <td>" . $obj['descripcionTipoUsuario'] . "</td>
                                                     <td>" . $obj['descripcionTercero'] . "</td>
-                                                    <td>" . $obj['email'] . "</td>td
+                                                    <td>" . $obj['email'] . "</td>
                                                 </tr>";
                                         }
                                         ?>
