Card #54 Agregar validacion cuando haya llave unica

--- a/module/Admin/view/admin/usuario/index.phtml
+++ b/module/Admin/view/admin/usuario/index.phtml
@@ -13,7 +13,7 @@ if ($this->msg != null) {
             <div class="box-head">
                 <header>
                     <h4 class="text-light">
-                       Formulario <strong>Saldo Inventario</strong> 
+                       Formulario <strong>Usuario</strong> 
                     </h4>
                 </header>
                 
